--- a/compile_bayesian_diffusivity_inference.ipynb
+++ b/compile_bayesian_diffusivity_inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,306 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>WellID</th>\n",
+       "      <th>Stage</th>\n",
+       "      <th>model</th>\n",
+       "      <th>mean_Do_x</th>\n",
+       "      <th>mean_Do_y</th>\n",
+       "      <th>mean_Do_z</th>\n",
+       "      <th>sd_Do_x</th>\n",
+       "      <th>sd_Do_y</th>\n",
+       "      <th>sd_Do_z</th>\n",
+       "      <th>hdi_3%_Do_x</th>\n",
+       "      <th>hdi_3%_Do_y</th>\n",
+       "      <th>hdi_3%_Do_z</th>\n",
+       "      <th>hdi_97%_Do_x</th>\n",
+       "      <th>hdi_97%_Do_y</th>\n",
+       "      <th>hdi_97%_Do_z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>5.077</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.156</td>\n",
+       "      <td>0.254</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.017</td>\n",
+       "      <td>4.589</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.128</td>\n",
+       "      <td>5.370</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>nonlinear</td>\n",
+       "      <td>0.689</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.046</td>\n",
+       "      <td>0.081</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>0.535</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.036</td>\n",
+       "      <td>0.848</td>\n",
+       "      <td>0.002</td>\n",
+       "      <td>0.055</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>6.835</td>\n",
+       "      <td>0.517</td>\n",
+       "      <td>0.487</td>\n",
+       "      <td>0.116</td>\n",
+       "      <td>0.062</td>\n",
+       "      <td>0.031</td>\n",
+       "      <td>6.669</td>\n",
+       "      <td>0.417</td>\n",
+       "      <td>0.445</td>\n",
+       "      <td>7.071</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>0.544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>nonlinear</td>\n",
+       "      <td>1.702</td>\n",
+       "      <td>0.518</td>\n",
+       "      <td>0.153</td>\n",
+       "      <td>0.188</td>\n",
+       "      <td>0.062</td>\n",
+       "      <td>0.016</td>\n",
+       "      <td>1.343</td>\n",
+       "      <td>0.418</td>\n",
+       "      <td>0.121</td>\n",
+       "      <td>2.048</td>\n",
+       "      <td>0.627</td>\n",
+       "      <td>0.179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>4.933</td>\n",
+       "      <td>0.561</td>\n",
+       "      <td>0.557</td>\n",
+       "      <td>0.041</td>\n",
+       "      <td>0.015</td>\n",
+       "      <td>0.018</td>\n",
+       "      <td>4.850</td>\n",
+       "      <td>0.536</td>\n",
+       "      <td>0.523</td>\n",
+       "      <td>5.005</td>\n",
+       "      <td>0.591</td>\n",
+       "      <td>0.592</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>344</th>\n",
+       "      <td>2</td>\n",
+       "      <td>19</td>\n",
+       "      <td>nonlinear</td>\n",
+       "      <td>1.899</td>\n",
+       "      <td>1.754</td>\n",
+       "      <td>1.611</td>\n",
+       "      <td>0.223</td>\n",
+       "      <td>0.054</td>\n",
+       "      <td>0.190</td>\n",
+       "      <td>1.489</td>\n",
+       "      <td>1.671</td>\n",
+       "      <td>1.256</td>\n",
+       "      <td>2.260</td>\n",
+       "      <td>1.872</td>\n",
+       "      <td>1.918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>345</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>4.845</td>\n",
+       "      <td>0.565</td>\n",
+       "      <td>1.702</td>\n",
+       "      <td>0.032</td>\n",
+       "      <td>0.004</td>\n",
+       "      <td>0.015</td>\n",
+       "      <td>4.790</td>\n",
+       "      <td>0.558</td>\n",
+       "      <td>1.674</td>\n",
+       "      <td>4.914</td>\n",
+       "      <td>0.573</td>\n",
+       "      <td>1.733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>346</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>nonlinear</td>\n",
+       "      <td>2.039</td>\n",
+       "      <td>0.565</td>\n",
+       "      <td>0.848</td>\n",
+       "      <td>0.219</td>\n",
+       "      <td>0.004</td>\n",
+       "      <td>0.091</td>\n",
+       "      <td>1.622</td>\n",
+       "      <td>0.558</td>\n",
+       "      <td>0.675</td>\n",
+       "      <td>2.374</td>\n",
+       "      <td>0.573</td>\n",
+       "      <td>0.988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>347</th>\n",
+       "      <td>2</td>\n",
+       "      <td>21</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>13.380</td>\n",
+       "      <td>1.869</td>\n",
+       "      <td>4.396</td>\n",
+       "      <td>0.083</td>\n",
+       "      <td>0.104</td>\n",
+       "      <td>0.083</td>\n",
+       "      <td>13.221</td>\n",
+       "      <td>1.662</td>\n",
+       "      <td>4.244</td>\n",
+       "      <td>13.537</td>\n",
+       "      <td>2.017</td>\n",
+       "      <td>4.574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>348</th>\n",
+       "      <td>2</td>\n",
+       "      <td>21</td>\n",
+       "      <td>nonlinear</td>\n",
+       "      <td>3.448</td>\n",
+       "      <td>1.871</td>\n",
+       "      <td>1.689</td>\n",
+       "      <td>0.474</td>\n",
+       "      <td>0.103</td>\n",
+       "      <td>0.232</td>\n",
+       "      <td>2.525</td>\n",
+       "      <td>1.659</td>\n",
+       "      <td>1.223</td>\n",
+       "      <td>4.193</td>\n",
+       "      <td>2.015</td>\n",
+       "      <td>2.040</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>349 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     WellID  Stage      model  mean_Do_x  mean_Do_y  mean_Do_z  sd_Do_x  \\\n",
+       "0         4      2     linear      5.077      0.001      0.156    0.254   \n",
+       "1         4      2  nonlinear      0.689      0.001      0.046    0.081   \n",
+       "2         4      3     linear      6.835      0.517      0.487    0.116   \n",
+       "3         4      3  nonlinear      1.702      0.518      0.153    0.188   \n",
+       "4         4      4     linear      4.933      0.561      0.557    0.041   \n",
+       "..      ...    ...        ...        ...        ...        ...      ...   \n",
+       "344       2     19  nonlinear      1.899      1.754      1.611    0.223   \n",
+       "345       2     20     linear      4.845      0.565      1.702    0.032   \n",
+       "346       2     20  nonlinear      2.039      0.565      0.848    0.219   \n",
+       "347       2     21     linear     13.380      1.869      4.396    0.083   \n",
+       "348       2     21  nonlinear      3.448      1.871      1.689    0.474   \n",
+       "\n",
+       "     sd_Do_y  sd_Do_z  hdi_3%_Do_x  hdi_3%_Do_y  hdi_3%_Do_z  hdi_97%_Do_x  \\\n",
+       "0      0.001    0.017        4.589        0.000        0.128         5.370   \n",
+       "1      0.001    0.005        0.535        0.000        0.036         0.848   \n",
+       "2      0.062    0.031        6.669        0.417        0.445         7.071   \n",
+       "3      0.062    0.016        1.343        0.418        0.121         2.048   \n",
+       "4      0.015    0.018        4.850        0.536        0.523         5.005   \n",
+       "..       ...      ...          ...          ...          ...           ...   \n",
+       "344    0.054    0.190        1.489        1.671        1.256         2.260   \n",
+       "345    0.004    0.015        4.790        0.558        1.674         4.914   \n",
+       "346    0.004    0.091        1.622        0.558        0.675         2.374   \n",
+       "347    0.104    0.083       13.221        1.662        4.244        13.537   \n",
+       "348    0.103    0.232        2.525        1.659        1.223         4.193   \n",
+       "\n",
+       "     hdi_97%_Do_y  hdi_97%_Do_z  \n",
+       "0           0.001         0.194  \n",
+       "1           0.002         0.055  \n",
+       "2           0.625         0.544  \n",
+       "3           0.627         0.179  \n",
+       "4           0.591         0.592  \n",
+       "..            ...           ...  \n",
+       "344         1.872         1.918  \n",
+       "345         0.573         1.733  \n",
+       "346         0.573         0.988  \n",
+       "347         2.017         4.574  \n",
+       "348         2.015         2.040  \n",
+       "\n",
+       "[349 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bayes_diffusivity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +363,232 @@
     "\n",
     "# merge bayesian and frequentist frames for comparison\n",
     "combined_diff_results = pd.concat([bayes_diffusivity, freq_diffusivity], axis=0).groupby([\"WellID\",\"Stage\",\"model\"]).first().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>WellID</th>\n",
+       "      <th>Stage</th>\n",
+       "      <th>n_events</th>\n",
+       "      <th>mean_Do_x</th>\n",
+       "      <th>mean_Do_y</th>\n",
+       "      <th>mean_Do_z</th>\n",
+       "      <th>loss_Do_x</th>\n",
+       "      <th>loss_Do_y</th>\n",
+       "      <th>loss_Do_z</th>\n",
+       "      <th>model</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>0.262334</td>\n",
+       "      <td>0.100006</td>\n",
+       "      <td>0.288670</td>\n",
+       "      <td>8.086044</td>\n",
+       "      <td>8.423185</td>\n",
+       "      <td>6.505284</td>\n",
+       "      <td>maximum_likelihood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>194.0</td>\n",
+       "      <td>6.144565</td>\n",
+       "      <td>4.522102</td>\n",
+       "      <td>4.498731</td>\n",
+       "      <td>35.144959</td>\n",
+       "      <td>25.180621</td>\n",
+       "      <td>24.828855</td>\n",
+       "      <td>maximum_likelihood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>224.0</td>\n",
+       "      <td>3.862787</td>\n",
+       "      <td>1.239209</td>\n",
+       "      <td>2.043634</td>\n",
+       "      <td>44.982678</td>\n",
+       "      <td>18.394451</td>\n",
+       "      <td>20.237183</td>\n",
+       "      <td>maximum_likelihood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>751.0</td>\n",
+       "      <td>2.598725</td>\n",
+       "      <td>2.346147</td>\n",
+       "      <td>3.351131</td>\n",
+       "      <td>43.032076</td>\n",
+       "      <td>14.989679</td>\n",
+       "      <td>16.000838</td>\n",
+       "      <td>maximum_likelihood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>353.0</td>\n",
+       "      <td>3.807855</td>\n",
+       "      <td>1.656502</td>\n",
+       "      <td>1.660410</td>\n",
+       "      <td>40.391880</td>\n",
+       "      <td>10.163448</td>\n",
+       "      <td>13.324410</td>\n",
+       "      <td>maximum_likelihood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>406.0</td>\n",
+       "      <td>2.661165</td>\n",
+       "      <td>0.100007</td>\n",
+       "      <td>1.433617</td>\n",
+       "      <td>29.532128</td>\n",
+       "      <td>8.436035</td>\n",
+       "      <td>14.110992</td>\n",
+       "      <td>maximum_likelihood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>521.0</td>\n",
+       "      <td>4.358088</td>\n",
+       "      <td>0.156888</td>\n",
+       "      <td>1.592434</td>\n",
+       "      <td>25.975763</td>\n",
+       "      <td>5.956408</td>\n",
+       "      <td>14.964574</td>\n",
+       "      <td>maximum_likelihood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>404.0</td>\n",
+       "      <td>2.168266</td>\n",
+       "      <td>0.162081</td>\n",
+       "      <td>1.817389</td>\n",
+       "      <td>21.276625</td>\n",
+       "      <td>6.980807</td>\n",
+       "      <td>14.817393</td>\n",
+       "      <td>maximum_likelihood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>603.0</td>\n",
+       "      <td>0.398528</td>\n",
+       "      <td>0.301417</td>\n",
+       "      <td>1.303838</td>\n",
+       "      <td>22.818484</td>\n",
+       "      <td>8.802756</td>\n",
+       "      <td>13.561609</td>\n",
+       "      <td>maximum_likelihood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>430.0</td>\n",
+       "      <td>2.441015</td>\n",
+       "      <td>0.521113</td>\n",
+       "      <td>2.723754</td>\n",
+       "      <td>21.131357</td>\n",
+       "      <td>10.269328</td>\n",
+       "      <td>18.919048</td>\n",
+       "      <td>maximum_likelihood</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>176 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     WellID  Stage  n_events  mean_Do_x  mean_Do_y  mean_Do_z  loss_Do_x  \\\n",
+       "0       1.0    1.0      56.0   0.262334   0.100006   0.288670   8.086044   \n",
+       "1       1.0    2.0     194.0   6.144565   4.522102   4.498731  35.144959   \n",
+       "2       1.0    3.0     224.0   3.862787   1.239209   2.043634  44.982678   \n",
+       "3       1.0    4.0     751.0   2.598725   2.346147   3.351131  43.032076   \n",
+       "4       1.0    6.0     353.0   3.807855   1.656502   1.660410  40.391880   \n",
+       "..      ...    ...       ...        ...        ...        ...        ...   \n",
+       "171     4.0   11.0     406.0   2.661165   0.100007   1.433617  29.532128   \n",
+       "172     4.0   12.0     521.0   4.358088   0.156888   1.592434  25.975763   \n",
+       "173     4.0   13.0     404.0   2.168266   0.162081   1.817389  21.276625   \n",
+       "174     4.0   14.0     603.0   0.398528   0.301417   1.303838  22.818484   \n",
+       "175     4.0   15.0     430.0   2.441015   0.521113   2.723754  21.131357   \n",
+       "\n",
+       "     loss_Do_y  loss_Do_z               model  \n",
+       "0     8.423185   6.505284  maximum_likelihood  \n",
+       "1    25.180621  24.828855  maximum_likelihood  \n",
+       "2    18.394451  20.237183  maximum_likelihood  \n",
+       "3    14.989679  16.000838  maximum_likelihood  \n",
+       "4    10.163448  13.324410  maximum_likelihood  \n",
+       "..         ...        ...                 ...  \n",
+       "171   8.436035  14.110992  maximum_likelihood  \n",
+       "172   5.956408  14.964574  maximum_likelihood  \n",
+       "173   6.980807  14.817393  maximum_likelihood  \n",
+       "174   8.802756  13.561609  maximum_likelihood  \n",
+       "175  10.269328  18.919048  maximum_likelihood  \n",
+       "\n",
+       "[176 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "freq_diffusivity"
    ]
   },
   {
