update diffusivity comparison

--- a/notebooks/compile_bayesian_diffusivity_inference.ipynb
+++ b/notebooks/compile_bayesian_diffusivity_inference.ipynb
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
     }
    ],
    "source": [
-    "make_diffusivity_comparison_plot(combined_diff_results, nonlinear_bayes_ms_data, stage_data=stagedata)\n",
+    "fig = make_diffusivity_comparison_plot(combined_diff_results, nonlinear_bayes_ms_data, stage_data=stagedata)\n",
     "fig.savefig('figures/5_diffusivity_comparison.pdf', dpi=200)\n",
     "fig.savefig('figures/5_diffusivity_comparison.png', dpi=200)\n",
     "plt.show()"
